vlib/v/checker/tests/generics_too_many_parameters.out
vlib/v/checker/tests/generics_too_many_parameters.vv:6:8: error: too many generic parameters got 5, expected 1
    4 | 
    5 | fn main() {
    6 |     foo<bool, int, bool, bool, int>(1)
      |        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    7 | }
